Fast TextOutput using String internals